# blog

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data.json  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: dev.yaml  test.yaml
blog/: admin.py  feeds.py  forms.py  managers.py  models.py  services.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
blog/templates/blog/: base.html
blog/templates/blog/post/: comment.html  detail.html  list.html  search.html  share.html
blog/templates/blog/post/includes/: comment_form.html
blog/templatetags/: blog_tags.py
config/: settings.py  urls.py
config/.github/workflows/: dev.yaml
tests/: conftest.py  utils.py
tests/test_post/: test_post_comment.py  test_post_detail.py  test_post_list.py  test_post_list_by_tag.py  test_post_share.py
