[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Mirzomumin <mirzomumin@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
pre-commit = "^3.6.2"
python-dotenv = "^1.0.1"
django-query-counter = "^0.4.0"
django-taggit = "^5.0.1"
pytest-django = "^4.8.0"
pytest-mock = "^3.12.0"
markdown = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "tests.py test_*.py *_tests.py"
